--- a/test/fixtures/parties.yml
+++ b/test/fixtures/parties.yml
@@ -3,10 +3,11 @@
 #
 # Table name: parties
 #
-#  id         :integer(4)      not null, primary key
-#  name       :string(100)
-#  created_at :datetime
-#  updated_at :datetime
+#  id           :integer(4)      not null, primary key
+#  name         :string(100)
+#  abbreviation :string(10)
+#  created_at   :datetime
+#  updated_at   :datetime
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
