--- a/test/fixtures/seats.yml
+++ b/test/fixtures/seats.yml
@@ -6,6 +6,7 @@
 #  id           :integer(4)      not null, primary key
 #  level_id     :integer(4)      not null
 #  seat_type_id :integer(4)      not null
+#  state_id     :integer(4)
 #  name         :string(200)
 #  created_at   :datetime
 #  updated_at   :datetime
